added form changes

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
               <div>Прізвище</div>
               <button class="close-btn">&times;</button>
             </div>
-            <input placeholder="Ваше Прізвище" type="text" name="name" />
+            <input placeholder="Ваше Прізвище" type="text" name="surname" />
             <div>Ім’я</div>
-            <input placeholder="Ваше ім’я" type="text" name="surname" />
+            <input placeholder="Ваше ім’я" type="text" name="name" />
             <div>Клас</div>
-            <select class="form__select" name="number">
+            <select class="form__select" name="classNum">
               <option value="">Виберіть варіант</option>
               <option>1</option>
               <option>2</option>
@@ -79,7 +79,7 @@
               <option>11</option>
             </select>
             <div>Номер перерви</div>
-            <select class="form__select" name="number">
+            <select class="form__select" name="breakNum">
               <option value="">Виберіть варіант</option>
               <option>1</option>
               <option>2</option>
@@ -91,6 +91,7 @@
             <div>Список замовлення</div>
             <div class="form__list">
               <div class="form__list">
+               <!-- <div class="form__list-text"><p>Ви ще не додали жодного товару</p></div>-->
                 <ol class="form__list-items"></ol>
               </div>
               <div class="total__price">
