--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
       </div>
     </div>
 
+    <div class="div"></div>
+
     <script src="js/modal.js"></script>
     <script src="js/app.js"></script>
   </body>
