--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     </div>
 
     <div class="div"></div>
+    <div class="div2"></div>
 
     <script src="js/modal.js"></script>
     <script src="js/app.js"></script>
