--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
       </div>
     </div>
 
-    <div class="div"></div>
-    <div class="div2"></div>
+    <div class="div_div"></div>
+
 
     <script src="js/modal.js"></script>
     <script src="js/app.js"></script>
