--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
         </li> -->
       </ul>
     </div>
-
+<heeader class="header">
+    <div class="container">
+        <div class="header__inner">
+            <div class="header__right">
+                <p class="header__name">School kitchen </p>
+                <img class="header__img" src="images/icon2.svg">
+            </div>
+            <div class="header__center">
+                <img src="images/healthy.svg">
+            </div>
+            <a href="control-panel.html" class="header__link"> Control page *test </a>
+        </div>
+    </div>
+</heeader>
     <div class="app">
       <div class="container">
         <div class="app__tray__container">
