--- a/control-panel.html
+++ b/control-panel.html
@@ -75,6 +75,6 @@
       </div>
     </section>
 
-    <script src="js/app.js"></script>
+    <script src="js/panel.js"></script>
   </body>
 </html>
