added done modal, improve functional

--- a/control-panel.html
+++ b/control-panel.html
@@ -55,6 +55,7 @@
               <li class="panel__order-item">
                 <div class="panel__order-item-box">
                   <div class="panel__order-timeout">Перерва: 2</div>
+                  <div class="panel__order-timeout panel__order-date">Дата: 2</div>
                   <div class="panel__order-top">
                     <p class="panel__order-info">Ім'я Прізвище Клас - 8</p>
                     <button class="panel__order-marker__btn">
