--- a/control-panel.html
+++ b/control-panel.html
@@ -33,7 +33,7 @@
           <div class="panel__menu-box panel-box">
             <h2 class="panel__menu-title">Меню</h2>
             <ul class="panel__menu-list">
-              <li class="panel__menu__item">
+              <!--<li class="panel__menu__item">
                 <div class="panel__menu__item-box">
                   <p class="panel__menu__item-name">Хот-Дог</p>
                   <p class="panel__menu__item-price">Ціна: 30 UAH</p>
@@ -46,7 +46,7 @@
                   <p class="panel__menu__item-price">Ціна: 30 UAH</p>
                 </div>
                 <button class="panel__menu__item-delete">Видалити</button>
-              </li>
+              </li>-->
             </ul>
           </div>
           <div class="panel__orders-box panel-box">
