added logik modal in control panel

--- a/control-panel.html
+++ b/control-panel.html
@@ -33,7 +33,7 @@
           <div class="panel__menu-box panel-box">
             <h2 class="panel__menu-title">Меню</h2>
             <ul class="panel__menu-list">
-             <!-- <li class="panel__menu__item">
+              <!-- <li class="panel__menu__item">
                 <div class="panel__menu__item-box">
                   <p class="panel__menu__item-name">Хот-Дог</p>
                   <p class="panel__menu__item-price">Ціна: 30 UAH</p>
@@ -53,15 +53,24 @@
             <div class="loader-box">
               <div class="loader"></div>
             </div>
-            <button class="panel__orders-render">Оновити данні <img class="load__img" src="images/load.png" alt=""></button>
+            <button class="panel__orders-render">
+              Оновити данні
+              <img class="load__img" src="images/load.png" alt="" />
+            </button>
             <h2 class="panel__menu-title">Замовлення</h2>
             <ul class="panel__order-list"></ul>
           </div>
         </div>
+        <button class="app__btn app__btn-panel">
+          <div class="app__decor">
+            <img src="images/arrow-right.svg" alt="" />
+          </div>
+          <span>Додати товар в меню</span>
+        </button>
       </div>
     </section>
 
-    <div id="Modal-menu"  class="modal">
+    <div id="Modal-menu" class="modal">
       <div class="modal__inner">
         <div class="modal-content">
           <form class="form" name="menu">
