--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
       <div class="app">
         <div class="container">
           <div class="app__tray__container">
-            <div class="app__tray-box animate__animated animate__fadeInDown">
-              <div class="app__tray"></div>
+            <div class="app__tray-box_animation animate__animated animate__fadeInDown">
+              <div class="app__tray-box ">
+                <div class="app__tray"></div>
+              </div>
             </div>
+
             <div class="app__tray-btn">
               <button class="app__tray-prev">
                 Видалити останній
