added orders modal

--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
   <body>
     <div class="wrapper">
       <div class="notification">
-        <ul class="notification__inner">
-          <!-- <li class="notification__item notification-remove">
-            <span class="notification__text"> Страву </span>
-            <span class="notification__name">Хот-Дог</span>
-            <span class="notification__text"> було видалено з замовлення </span>
-          </li> -->
-        </ul>
+        <ul class="notification__inner"></ul>
       </div>
       <header class="header">
         <div class="container">
@@ -90,7 +84,14 @@
     <div id="FirstModal" class="first__modal">
       <div class="modal__inner">
         <div class="modal-box">
-          <video preload="auto" autoplay controls loop id="modal__video" controls>
+          <video
+            preload="auto"
+            autoplay
+            controls
+            loop
+            id="modal__video"
+            controls
+          >
             <source src="video/video.mp4" type="video/mp4" />
           </video>
           <button type="submit" id="ModalBtn" class="form__btn">
@@ -195,6 +196,42 @@
         </div>
       </div>
     </div>
+
+    <div class="modal-orders">
+      <div class="modal__orders-inner">
+        <button class="close__orders-btn">&times;</button>
+        <div class="modal__orders-content">
+          <ul class="modal__orders-list">
+             <li class="panel__order-item">
+                <div class="panel__order-item-box">
+                  <div class="panel__order-timeout">Перерва:</div>
+                  <div class="panel__order-timeout panel__order-date">Дата: </div>
+                  <div class="panel__order-top">
+                    <p class="panel__order-info">iм'я Клас</p>
+                    <button data-id='${
+                      order.id
+                    }' class="panel__order-marker__btn ${progresClass}">
+                      ${btnText}
+                    </button>
+                  </div>
+                  <ol class="panel__orders-list__items">
+                   назва
+                  </ol>
+                  <p class="panel__order-fullprice">
+                    Загальна сумма замовлення:  UAH
+                  </p>
+                </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+
+
+    <button class="app__orders-list-btn">
+      <img class="app__orders-list-img" src="images/ordersList.png" alt="img">
+    </button>
+
 
     <script src="js/modal.js"></script>
     <script src="js/app.js"></script>
