added adaptive modal, create a deadline in orders object

--- a/control-panel.html
+++ b/control-panel.html
@@ -106,12 +106,12 @@
             />
             <div>Картинка</div>
             <input class="form__file" type="file" />
-            <!-- <button type="submit" id="FormBtn" class="form__btn">
+            <button type="submit" id="FormBtn" class="form__btn">
               <div class="form__decor">
                 <img src="images/arrow-right.svg" alt="arrow" />
               </div>
               <span>Відправити</span>
-            </button> -->
+            </button>
           </form>
         </div>
       </div>
