added timer for orders

--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@
       </div>
     </div>
 
+
+
     <div id="FirstModal" class="first__modal">
       <div class="modal__inner">
         <div class="modal-box">
           <video
             autoplay
+            preload="auto"
             controls
             loop
             id="modal__video"
@@ -219,11 +222,12 @@
     </div>
 
 
-    <button class="app__orders-list-btn">
+    <button class="app__orders-list-btn animate__animated">
       <img class="app__orders-list-img" src="images/ordersList.svg" alt="img">
     </button>
 
 
+   
     <script src="js/modal.js"></script>
     <script src="js/app.js"></script>
   </body>
